-- global alert message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <app-external-header></app-external-header>
 <!-- <app-home-banner></app-home-banner> -->
 <!-- <app-home-index></app-home-index> -->
-
+<app-alert></app-alert>
 
 <router-outlet></router-outlet>
 <app-external-footer></app-external-footer>
