--- a/src/app/web/component/user/user-login/user-login.component.css
+++ b/src/app/web/component/user/user-login/user-login.component.css
@@ -84,3 +84,21 @@
     margin-bottom: 10px;
     color: #555;
 }
+
+
+.error-message {
+    color: red;
+    font-size: 0.9em;
+    margin-top: 4px;
+}
+
+.alert {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+.alert-danger {
+    background-color: #f8d7da;
+    color: #721c24;
+}
